Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50060

[Magma] Failure of prepare CompactKVStore should abort entire compaction

    XMLWordPrintable

Details

    • Triaged
    • 1
    • No
    • KV 2021-Dec

    Description

      If we don't abort the compaction after the prepare namespace compaction then we may leave prepares for collections in the DurabilityMonitors which would break durability.

      Attachments

        For Gerrit Dashboard: MB-50060
        # Subject Branch Project Status CR V

        Activity

          People

            ben.huddleston Ben Huddleston
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty