MB-50060: Fail compaction if prepare CompactKVStore fails

We need to fail a collection dropping compaction if the CompactKVStore
call fails over the prepare namespace. If we do not and the rest of
the CompactKVStore calls pass then we will fail to clean up the prepares
belonging to dropped collections in the DurabilityMonitors.

Change-Id: Ic9deea2e383a7a0ac497aa25006ba331f8b7c3db
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/167488
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>